package org.example.empleados;

public class Disenyador extends Empleado {

    public void realizarTarea(){
        System.out.println("Creando diseños gráficos y prototipos.");
    }
}
